# openagents

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Procfile  a2as.yaml  pyproject.toml  requirements.txt  test_mcp_detection.py
asdrp/actions/: README.md  tools_meta.py
asdrp/agents/: __init__.py  agent_factory.py  config_loader.py  protocol.py
asdrp/orchestration/: __init__.py
asdrp/util/: __init__.py  dict_utils.py
config/: moe.yaml  open_agents.yaml  open_agents.yaml.bak  smartrouter.yaml  voice_config.yaml
docs/: AGENT_SYSTEM_GUIDE.md  COMPLETE_TUTORIAL.md  HACKATHON.md  IMPLEMENTATION_GUIDE.md  README.md  SERVER_QUICK_START.md  TESTING_GUIDE.md
docs/agents/: agent_configuration.md  agent_factory.md  agent_protocol.md  agents_overview.md  config_evaluation.md  finance_tools.md  session_memory.md  toolsmeta.md
docs/mcp/: MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  MCP_QUICK_REFERENCE.md
docs/moe/: expert_selection.md  moe_orchestrator.md
docs/router/: caching.md  optimization.md  parallelism.md  performance.md  smartrouter.md
docs/tricks/: fork_yelp_mcp.md  interactive_maps.md  partial_tutorial.md
docs/voice/: README.md  realtime_implementation.md  semantic_endpointing.md  visualization.md  voice_arch_evaluation.md  voice_implementation.md  voice_test_plan.md
frontend_stream/: Home.py  README.md  __init__.py  index.html  run.sh
frontend_stream/modules/: __init__.py  about.py  agent_testing.py  configuration.py
frontend_stream/pages/: 1_Agent_Testing.py  2_Configuration.py  3_About.py
frontend_stream/static/: server.py
frontend_stream/utils/: css_loader.py
frontend_web/: Procfile  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package-lock.json.backup  package.json  package.json.backup  package.json.upgraded
frontend_web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend_web/components/: .smartrouter-panel.tsx.swp  agent-config-view.tsx  agent-selector.tsx  execution-mode-toggle.tsx  graph-visualizer.tsx  interactive-map.tsx  navigation.tsx  simulation-console.tsx  smartrouter-panel.tsx  smartrouter-visualization.tsx  unified-chat-interface.tsx  yaml-editor.tsx
frontend_web/docs/: AGENT_DISCOVERY.md  ARCHITECTURE.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  TUTORIAL.md  UI_FEATURES_UPDATE.md
frontend_web/lib/: api-client.ts  types.ts  utils.ts
frontend_web/scripts/: check-compatibility.js  test-upgrade.sh  upgrade-nextjs.sh
notes/: 01_build_frontend_web.md  02_implementation_summary.md  code_review.md  moe.md  openai_stt.md  openai_tts.md  scratch
scripts/: README.md  check_livekit_versions.sh  check_map_tools.sh  check_map_tools_list.py  diagnose_heroku_frontend.sh  fix_all_worktrees.sh  fix_cursor_worktree.sh  run_be_tests.sh  run_fe_tests.sh  run_realtime.sh  run_server.sh  sync_all_cursor_worktrees.sh
scripts/heroku/: deploy_heroku.sh  fix_heroku_buildpacks.sh  get_heroku_urls.sh  set_heroku_env.sh
scripts/orchestration/: check_moe_config.py  setup_moe.sh
server/: Procfile  Procfile.worker  README.md  __init__.py  agent_service.py  auth.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py
server/docs/: AGENT_EXECUTION.md  ENDPOINT_IMPLEMENTATION_SUMMARY.md  test_endpoints.sh
server/guardrails/: hallucination.py
server/voice/: __init__.py  client.py  config.py  coordinator.py  dependencies.py  exceptions.py  models.py  query_accumulation.py  router.py  service.py  utils.py
server/voice/providers/: __init__.py  elevenlabs_provider.py  openai_provider.py
server/voice/realtime/: README.md  __init__.py  agent.py  agent_v2.py  audio.py  buffered_stt.py  config.py  exceptions.py  models.py  router.py  semantic_endpointing.py  service.py  simple_agent.py  thinking_filler.py  worker.py
server/voice/tests/: test_query_accumulation_properties.py  test_semantic_endpointing_properties.py
sessions/: test_session.db
tests/: test.db  test_fast_path.py  test_map_static_url.py  test_moe_routing.py  test_smartrouter_session.py  test_tools_endpoint.py
tests/e2e/: test_business_header_regex.py  test_complete_flow.py  test_comprehensive_fix.py  test_coordinate_regex.py  test_dynamic_selection.py  test_final_validation.py  test_individual_experts.py  test_map_agent_output.py  test_map_intent_detection.py  test_moe_synthesis_issue.py  test_moe_vs_individual.py  test_restaurant_routing.py  (+3 more)
yelp-mcp/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
yelp-mcp/.github/: PULL_REQUEST_TEMPLATE.md
yelp-mcp/src/yelp_agent/: api.py  api_optimized.py  formatters.py  loggers.py  main.py
(+269 files in other folders)
